--- a/todo_app/docker-compose.yml
+++ b/todo_app/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.7"
 services:
   web:
+    image: dsifford/php-pdo-apache
     build:
       context: .
     depends_on:
@@ -15,8 +16,19 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: app
+    volumes:
+      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - data:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    depends_on:
+      - db
     volumes:
       - data:/var/lib/mysql
+    ports:
+      - 22222:80
 
 volumes:
   data:
